--- a/src/ClientFX/HomePage.fxml
+++ b/src/ClientFX/HomePage.fxml
@@ -1,38 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="online.judge.HomePageController">
+<AnchorPane id="AnchorPane" prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientFX.HomePageController">
    <children>
       <Hyperlink alignment="CENTER" layoutX="663.0" layoutY="47.0" onAction="#bLogIn" text="Log Out">
          <font>
             <Font name="Segoe UI" size="18.0" />
          </font>
       </Hyperlink>
-      <BorderPane layoutX="41.0" layoutY="82.0" prefHeight="39.0" prefWidth="430.0">
-         <left>
-            <MenuBar prefHeight="40.0" prefWidth="430.0" style="-fx-background-color: TRANSPARENT;" BorderPane.alignment="CENTER">
-              <menus>
-                <Menu mnemonicParsing="false" style="-fx-font-size: 18;" text="HOME">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="Help" />
-                        <MenuItem mnemonicParsing="false" text="Exit" />
-                     </items>
-                </Menu>
-                <Menu mnemonicParsing="false" style="-fx-font-size: 18;" text="CONTESTS" />
-                <Menu mnemonicParsing="false" style="-fx-font-size: 18;" text="PROBLEMSET" />
-                  <Menu mnemonicParsing="false" style="-fx-font-size: 18;" text="SEARCH" />
-              </menus>
-            </MenuBar>
-         </left>
-      </BorderPane>
       <Text layoutX="51.0" layoutY="248.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1. Click on the &quot;CONTSTS&quot; menubar and join the upcoming contest." wrappingWidth="537.9999876022339">
          <font>
             <Font size="14.0" />
@@ -58,5 +38,24 @@
             <Font size="14.0" />
          </font>
       </Text>
+      <Button layoutX="63.0" layoutY="73.0" mnemonicParsing="false" onAction="#showHome" prefHeight="39.0" prefWidth="83.0" text="HOME">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <Button layoutX="146.0" layoutY="73.0" mnemonicParsing="false" onAction="#bContestPage" text="DASHBOARD">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <Button layoutX="276.0" layoutY="73.0" mnemonicParsing="false" onAction="#showUserStandings" prefHeight="39.0" prefWidth="124.0" text="STANDINGS">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <Button layoutX="400.0" layoutY="73.0" mnemonicParsing="false" onAction="#showUserStatus" prefHeight="39.0" prefWidth="132.0" text="STATUS">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
